<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="notification_text">Notification</string>
    <string name="account">account</string>
    <string name="Card_name_1">Roman Kamushken</string>
    <string name="Card_text_1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="Card_time_1">2 days ago</string>
    <string name="Card_name_2">Tina Turbina</string>
    <string name="Card_text_2">“into component container and with resizing constraints set????”</string>
    <string name="Card_time_2">18 minutes ago</string>
    <string name="Card_name_3">Tomek Kuwalskij</string>
    <string name="Card_text_3">“into component container and with resizing constraints set????”</string>
    <string name="Card_time_3">2 days ago</string>
    <string name="Card_replays">117 replays</string>
</resources>